Solid Rocket Booster fuel tanks now work.